--- a/jembot_all_docker/docker-compose.yml
+++ b/jembot_all_docker/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     container_name: django_web
     command: gunicorn _homework.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - .:/project                # 루트 대신 /app에 마운트
+      - .:/project                # 루트 대신 /project에 마운트
       - static_volume:/staticfiles
       -  media_volume:/project/media  # media 볼륨 추가
-    working_dir: /project         # 작업 디렉토리를 /app으로 설정
+    working_dir: /project         # 작업 디렉토리를 /project으로 설정
     expose:
       - "8000"
     environment:
